--- a/style.css
+++ b/style.css
@@ -16,7 +16,15 @@
 
 body{
     font-family: 'Public Sans', sans-serif;
-    font-size: 15px;
+    font-size: 14px;
+    line-height: 17px;
+}
+details > summary {
+  list-style: none;
+}
+details[open] summary {
+  font-weight: bold;
+  text-decoration: underline;
 }
 #mtop{
     margin-top: 35px;
@@ -31,4 +39,13 @@ body{
 }
 .grid_b{
     text-align: right;
+}
+#circle {
+    background: #F5FF00;
+    border-radius: 50%;
+    width: 1000px;
+    height: 1000px;
+    filter: blur(30px);
+    margin-left: -600px;
+    margin-top: -50px;
 }
