--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body a:hover {
     color: grey;
 } */
 
-details>summary {
+/* details>summary {
     list-style: none;
     text-decoration: underline;
 }
@@ -50,7 +50,7 @@ details:hover {
 details[open] summary {
     font-weight: bold;
     text-decoration: underline;
-}
+} */
 
 #mtop {
     margin-top: 35px;
@@ -64,7 +64,7 @@ details[open] summary {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 30px;
-    height: 900px;
+    height: 100vh;
 }
 
 .grid_a {
