--- a/style.css
+++ b/style.css
@@ -93,14 +93,22 @@ details[open] summary {
 /* .faded{
     background-color: rgba(0, 0, 0, 0.05);
 } */
+h3{
+    margin-bottom: 8px;
+}
 article{
     font-weight: 700;
 }
 .works{
     grid-column: 1 / 3;
+    margin-top: -70px;
 }
 .img{
     width: 300px;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+}
+.img2{
+    width: 450px;
     border: 1px solid rgba(0, 0, 0, 0.05);
 }
 .ordine{
@@ -138,7 +146,9 @@ article{
     body {
         font-size: 14px;
     }
-
+    .works{
+        margin-top: -40px;
+    }
 }
 
 @media (min-width:1100px) {
@@ -175,11 +185,15 @@ article{
     /* //////////////////////////////////////////////////////// */
     .works{
         grid-column:2 / 5;
+        margin-top: 0px;
     }
     .ordine{
         grid-column: 6 / 10;
     }
     .img{
         width: 500px;
+    }
+    .img2{
+        width: 600px;
     }
 }
