--- a/stylet.css
+++ b/stylet.css
@@ -208,11 +208,13 @@ article{
 
 #carousel-1:checked ~ .control-1,
 #carousel-2:checked ~ .control-2,
-#carousel-3:checked ~ .control-3 {
+#carousel-3:checked ~ .control-3,
+#carousel-4:checked ~ .control-4,
+#carousel-5:checked ~ .control-5 {
     display: block;
 }
 
-.carousel-indicators {
+/* .carousel-indicators {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -230,7 +232,7 @@ article{
 }
 
 .carousel-bullet {
-    color: #fff;
+    color: yellow;
     cursor: pointer;
     display: block;
     font-size: 35px;
@@ -238,11 +240,13 @@ article{
 
 .carousel-bullet:hover {
     color: #aaaaaa;
-}
+} */
 
 #carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
 #carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
-#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
+#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet,
+#carousel-4:checked ~ .control-4 ~ .carousel-indicators li:nth-child(4) .carousel-bullet,
+#carousel-5:checked ~ .control-5 ~ .carousel-indicators li:nth-child(5) .carousel-bullet {
     color: #428bca;
 }
 
