--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
     color: rgba(0, 0, 0, 0.4);
 }
 
+.bold {
+    font-weight: 700;
+}
+
 body {
     font-family: 'Public Sans', sans-serif;
     font-size: 16px;
@@ -32,25 +36,6 @@ body a {
 body a:hover {
     text-decoration: underline;
 }
-
-/* body a:visited{
-    text-decoration: none;
-    color: grey;
-} */
-
-/* details>summary {
-    list-style: none;
-    text-decoration: underline;
-}
-
-details:hover {
-    cursor: pointer;
-}
-
-details[open] summary {
-    font-weight: bold;
-    text-decoration: underline;
-} */
 
 #mtop {
     margin-top: 35px;
@@ -71,9 +56,6 @@ details[open] summary {
     font-weight: 600;
 }
 
-/* .grid_b, .grid_c{
-    text-align: right;
-} */
 .grid_c {
     grid-column: 2;
     margin-top: -100px;
@@ -85,55 +67,205 @@ details[open] summary {
     background-size: cover;
     background-position: bottom;
 }
-.about{
+
+.about {
     display: none;
 }
+
 /* ///////////////// PAGINA PROGETTO ////////////////////// */
 /* //////////////////////////////////////////////////////// */
 /* .faded{
     background-color: rgba(0, 0, 0, 0.05);
 } */
-h3{
+h3 {
     margin-bottom: 8px;
 }
-article{
+
+article {
     font-weight: 700;
 }
-.works{
+
+.works {
     grid-column: 1 / 3;
     margin-top: -70px;
 }
-.img{
+
+.img {
     width: 300px;
     border: 1px solid rgba(0, 0, 0, 0.05);
 }
-.img2{
+
+.img2 {
     width: 450px;
     border: 1px solid rgba(0, 0, 0, 0.05);
 }
-.ordine{
+
+.ordine {
     /* margin-top: 10px; */
     grid-column: 1 / 3;
     justify-self: center;
     justify-items: center;
 }
 
-/* img{
+.footer {
+    background-color: black;
+    color: white;
+    margin-top: -3vw;
+    padding: 20px 35px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    font-size: 0.8rem;
+}
+
+.footer p {
+    text-align: right;
+    font-style: italic;
+}
+
+.scroll {
+    margin: 4px, 4px;
+    padding: 4px;
+    height: 700px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    text-align: justify;
+}
+
+/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////// */
+/* /////////////////////////////////CAROUSEL/////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////// */
+
+.carousel {
+    position: relative;
+    margin-top: 26px;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.carousel-inner {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+
+.carousel-open:checked+.carousel-item {
+    position: static;
+    opacity: 100;
+}
+
+.carousel-item {
+    position: absolute;
+    opacity: 0;
+    -webkit-transition: opacity 0.6s ease-out;
+    transition: opacity 0.6s ease-out;
+}
+
+.carousel-item img {
+    display: block;
+    height: auto;
     max-width: 100%;
-    filter: blur(20px);
-    height:fit-content
-} */
-/* #circle {
-    background: #F5FF00;
+}
+
+.carousel-control {
+    background: rgba(0, 0, 0, 0.28);
     border-radius: 50%;
-    width: 1000px;
-    height: 1000px;
-    filter: blur(30px);
-    margin-left: -600px;
-    margin-top: -50px;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+    font-size: 40px;
+    height: 40px;
+    line-height: 35px;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+    cursor: pointer;
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    text-align: center;
+    width: 40px;
+    z-index: 10;
+}
+
+.carousel-control.prev {
+    left: 2%;
+}
+
+.carousel-control.next {
+    right: 2%;
+}
+
+.carousel-control:hover {
+    background: rgba(0, 0, 0, 0.8);
+    color: #aaaaaa;
+}
+
+#carousel-1:checked~.control-1,
+#carousel-2:checked~.control-2,
+#carousel-3:checked~.control-3,
+#carousel-4:checked~.control-4,
+#carousel-5:checked~.control-5 {
+    display: block;
+}
+
+/* .carousel-indicators {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    bottom: 2%;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 10;
+}
+
+.carousel-indicators li {
+    display: inline-block;
+    margin: 0 5px;
+}
+
+.carousel-bullet {
+    color: yellow;
+    cursor: pointer;
+    display: block;
+    font-size: 35px;
+}
+
+.carousel-bullet:hover {
+    color: #aaaaaa;
 } */
 
+/* #carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
+#carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
+#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet,
+#carousel-4:checked ~ .control-4 ~ .carousel-indicators li:nth-child(4) .carousel-bullet,
+#carousel-5:checked ~ .control-5 ~ .carousel-indicators li:nth-child(5) .carousel-bullet {
+    color: #428bca;
+} */
 
+#title {
+    width: 100%;
+    position: absolute;
+    padding: 0px;
+    margin: 0px auto;
+    text-align: center;
+    font-size: 27px;
+    color: rgba(255, 255, 255, 1);
+    font-family: 'Open Sans', sans-serif;
+    z-index: 9999;
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
+}
+
+/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////// */
 
 
 
@@ -149,7 +281,8 @@ article{
     body {
         font-size: 14px;
     }
-    .works{
+
+    .works {
         margin-top: -40px;
     }
 }
@@ -171,33 +304,35 @@ article{
         grid-column: 8;
         margin-top: 0px;
     }
+
     .grid_b,
     .grid_c {
         text-align: right;
     }
-    .about_m{
-        display: none;
-    }
-    .about{
+
+    .about {
         display: block;
         grid-column: 4 / 7;
         margin-top: 85px;
         margin-left: 5px;
     }
+
     /* ///////////////// PAGINA PROGETTO ////////////////////// */
     /* //////////////////////////////////////////////////////// */
-    .works{
-        grid-column:2 / 5;
+    .works {
+        grid-column: 2 / 5;
         margin-top: 0px;
     }
-    .ordine{
+
+    .ordine {
         grid-column: 6 / 10;
     }
 
-    .img{
+    .img {
         width: 500px;
     }
-    .img2{
+
+    .img2 {
         width: 600px;
     }
 
@@ -205,7 +340,7 @@ article{
     /* .fix{
         position: fixed;
     } */
-    .slider{
+    .slider {
         grid-column: 6 / 10;
 
     }
