--- a/stylet.css
+++ b/stylet.css
@@ -133,6 +133,11 @@ article{
     margin-top: -50px;
 } */
 
+.footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 
 
 /* //////////////////////////////////////////////////////////////////////////// */
