--- a/style.css
+++ b/style.css
@@ -90,7 +90,6 @@ article {
 
 .works {
     grid-column: 1 / 3;
-    margin-top: -70px;
 }
 
 .img {
@@ -315,6 +314,9 @@ footer{
         grid-column: 4 / 7;
         margin-top: 85px;
         margin-left: 5px;
+    }
+    .works{
+        margin-right: 10px;
     }
 
     /* ///////////////// PAGINA PROGETTO ////////////////////// */
