--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@
 .bold {
     font-weight: 700;
 }
+.italic{
+    font-style: italic;
+}
 #mtop {
     margin-top: 35px;
 }
@@ -90,6 +93,7 @@ article {
 }
 
 .works {
+    margin-top: 10px;
     grid-column: 1 / 3;
 }
 
@@ -286,7 +290,7 @@ footer{
     }
 
     .works {
-        margin-top: -40px;
+        margin-top: 10px;
     }
     .video{
         width: 500px;
